Test ProductRepositoryTests.java and change List.of() -> Arrays.listOf()