@@ -1,9 +1,6 @@
 package com.shopme.admin.user;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-import java.util.List;
-
+import com.shopme.common.entity.Role;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
@@ -11,7 +8,9 @@ import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabas
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.test.annotation.Rollback;
 
-import com.shopme.common.entity.Role;
+import java.util.Arrays;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 @DataJpaTest
 @AutoConfigureTestDatabase(replace = Replace.NONE)
@@ -41,7 +40,7 @@ public class RoleRepositoryTests {
 				+ "and update order status");
 		
 		Role roleAssistant = new Role("Assistant", "manage questions and reviews");
-		
-		repo.saveAll(List.of(roleSalesperson, roleEditor, roleShipper, roleAssistant));
+
+		repo.saveAll(Arrays.asList(roleSalesperson, roleEditor, roleShipper, roleAssistant));
 	}
 }
